--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <h2>hello, I am</h2>
     <h1>Nombulelo Phatlane</h1>
     <h3>Front-end developer based in South Africa</h3>
-    <a href="#" class="btn btn-info">Contact Me</a>
+    <div class="button">
+    <a href="#" class="btn btn-light">Contact Me</a>
+    </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
