--- a/index.html
+++ b/index.html
@@ -25,6 +25,24 @@
     <a href="#" class="btn btn-light">Contact Me</a>
     </div>
     </div>
+    <p>Below are some projects I've worked on</p>
+    <div class="container text-center">
+        <div class="row row-cols-2">
+            <div class="col"><img src="src/images/puppy.png" class="img-fluid" alt="Puppy App"></div>
+            <div class="col">
+                <h2>Puppy App</h2>
+                <p>If you love puppies and would like to adopt one then this is the perfect app for you!
+                    <div class="nav-link"><a href="#" class="btn btn-info">Learn More</a></div>
+                </p>
+            </div>
+            <div class="col">
+                <h2>Weather App</h2>
+                <p>Weather App is a project I worked on using css, js, html and API to collect real-time data from all over the world.
+                <div class="nav-link"><a href="#" class="btn btn-info">Learn More</a></div> </p>
+            </div>
+            <div class="col"><img src="src/images/weather.png" class="img-fluid" alt="Weather App"></div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
