made website compatible with mobile devices

--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
         <div class="row row-cols-2">
             <div class="col"><img src="src/images/puppy.png" class="img-fluid" alt="Puppy App"></div>
             <div class="col">
+                <div class="project-description"></div>
                 <h2>Puppy App</h2>
                 <p>If you love puppies and would like to adopt one then this is the perfect app for you!
                     <div class="nav-link"><a href="#" class="btn btn-info">Learn More</a></div>
                 </p>
             </div>
             <div class="col">
+                <div class="project-description"></div>
                 <h2>Weather App</h2>
                 <p>Weather App is a project I worked on using css, js, html and API to collect real-time data from all over the world.
                 <div class="nav-link"><a href="#" class="btn btn-info">Learn More</a></div> </p>
