--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <p>Below are some projects I've worked on</p>
     <div class="container text-center">
         <div class="row row-cols-2">
+            <div class="col d-none d-lg-block">
             <div class="col"><img src="src/images/puppy.png" class="img-fluid" alt="Puppy App"></div>
+            </div>
             <div class="col">
                 <div class="project-description"></div>
                 <h2>Puppy App</h2>
@@ -42,7 +44,9 @@
                 <p>Weather App is a project I worked on using css, js, html and API to collect real-time data from all over the world.
                 <div class="nav-link"><a href="#" class="btn btn-info">Learn More</a></div> </p>
             </div>
+            <div class="col d-none d-lg-block">
             <div class="col"><img src="src/images/weather.png" class="img-fluid" alt="Weather App"></div>
+        </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
