--- a/about.html
+++ b/about.html
@@ -18,13 +18,13 @@
 <body>
     <div class="header container">
         <div class="row">
-            <div class="col-6">
+            <div class="col-6" id="column">
     <h1>Hi, I am Nombulelo Phatlane</h1>
-    <h3>Front-end developer based in South Africa</h3>
+    <h2>Front-end developer based in South Africa</h2>
     <p>For anyone interested in learning code, they should join the SheCodes workshop. You will be challenged with different exercises, nand everything is well explained. There are also homeworks and deadlines that need to be adhered to</p>
     <div class="nav-link"><a href="#" class="btn btn-info">Check out my work</a></div>
     </div>
-    <div class="col-6">
+    <div class="col-6" id="column">
     <img src="src/images/tumelo.jpg" class="img-fluid" width="450px" height="150px" alt="Nombulelo Phatlane" ></div>
     </div>
     </div>
