--- a/index.html
+++ b/index.html
@@ -25,27 +25,37 @@
     <a href="#" class="btn btn-light">Contact Me</a>
     </div>
     </div>
-    <p>Below are some projects I've worked on</p>
+    <p>Below are projects I've worked on</p>
     <div class="container text-center">
         <div class="row row-cols-2">
             <div class="col d-none d-lg-block">
             <div class="col"><img src="src/images/puppy.png" class="img-fluid" alt="Puppy App"></div>
             </div>
-            <div class="col">
+            <div class="col" id="column">
                 <div class="project-description"></div>
-                <h2>Puppy App</h2>
-                <p>If you love puppies and would like to adopt one then this is the perfect app for you!
+                <h2>Puppy Website</h2>
+                <p>Totally Pawssible is a delightful online destination for all dog lovers who appreciate every breed and would like to own one someday. This webpage crafted using HTML and CSS, offers a wide range of dog breeds both small and big, from the great dane to the chihuahua. Whether you're a first time owner or an experienced owner Totally Pawssible is your go to source for learning about our fury friends.
                     <div class="nav-link"><a href="#" class="btn btn-info">Learn More</a></div>
                 </p>
             </div>
-            <div class="col">
+            <div class="col" id="column">
                 <div class="project-description"></div>
                 <h2>Weather App</h2>
-                <p>Weather App is a project I worked on using css, js, html and API to collect real-time data from all over the world.
+                <p>The weather app is a user-friendly web application built using HTML, CSS and JavaScript. It provides real time weather information for locations all around the world. The app alllows users to enter the name of a city or use their device's location using geolocation to retrieve  weather data for their current location. The app's interface is designed using HTML and CSS to provide visually appealing and intuitive user experience. It displays essential weather information such as temperature, humidity, wind speed and weather conditions for the selected location. JavaScript is used to fetch weather data from a weather API, parse the retrieved data, and dynamically update the app's interface.
                 <div class="nav-link"><a href="#" class="btn btn-info">Learn More</a></div> </p>
             </div>
             <div class="col d-none d-lg-block">
             <div class="col"><img src="src/images/weather.png" class="img-fluid" alt="Weather App"></div>
+        </div>
+        <div class="col d-none d-lg-block">
+            <div class="col"><img src="src/images/breakout-app.png" class="img-fluid" alt="Breakout Game"></div>
+        </div>
+        <div class="col" id="column">
+            <div class="project-description"></div>
+            <h2>Breakout Game</h2>
+            <p>Breakout is a web application for gamers. It is built using HTML, CSS and JavaScript. Users can interact with the app by moving the cursor around. The game alerts players when they lose and win and it also keeps count of their score. Feel like starting the game afresh? The reset button is just for that!
+                <div class="nav-link"><a href="#" class="btn btn-info">Learn More</a>
+            </p>
         </div>
         </div>
     </div>
