--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             <div class="col-6" id="column">
     <h1>Hi, I am Nombulelo Phatlane</h1>
     <h2>Front-end developer based in South Africa</h2>
-    <p>For anyone interested in learning code, they should join the SheCodes workshop. You will be challenged with different exercises, nand everything is well explained. There are also homeworks and deadlines that need to be adhered to</p>
+    <p>Nombulelo Phatlane is a goal driven individual who dreams of becoming a programmer and started her coding journey with Matt Delac and his SheCodes workshop at the beggining of 2023. Since  joining SheCodes Nombulelo has learnt HTML, CSS and JavaScript and built projects using those languages. </p>
     <div class="nav-link"><a href="#" class="btn btn-info">Check out my work</a></div>
     </div>
     <div class="col-6" id="column">
