created work page

--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Nombulelo Phatlane</title>
+    <title>Document</title>
     <link rel="stylesheet" href="src/style.css">
     <script src="https://kit.fontawesome.com/77cc4812f3.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,16 +17,27 @@
 </head>
 <body>
     <div class="content-container container">
-        <div class="row">
-            <div class="col-6" id="column">
-    <h1>Hi, I am Nombulelo Phatlane</h1>
-    <h2>Front-end developer based in South Africa</h2>
-    <p>Nombulelo Phatlane is a goal driven individual who dreams of becoming a programmer and started her coding journey with Matt Delac and his SheCodes workshop at the beggining of 2023. Since  joining SheCodes Nombulelo has learnt HTML, CSS and JavaScript and built projects using those languages. </p>
-    <div class="nav-link"><a href="#" class="btn btn-info">Check out my work</a></div>
+        <div class="content" id="content-elements">
+                <h1>Take a look of what I have been working on</h1>
+ <div class="row align-items-center">
+    <div class="col-6">
+        <img src="src/images/puppy.png" class="img-fluid" alt="Puppy Website">
+        <h2>Puppy Website</h2>
+        <p>Built with HTML and CSS</p>
     </div>
-    <div class="col-6" id="column">
-    <img src="src/images/tumelo.jpg" class="img-fluid" width="450px" height="150px" alt="Nombulelo Phatlane" ></div>
+    <div class="col-6">
+        <img src="src/images/weather.png" class="img-fluid" alt="Weather App">
+        <h2>Weather App</h2>
+        <p>Built with HTML,CSS and JavaScript</p>
     </div>
+    <div class="col-6">
+        <img src="src/images/breakout-app.png" class="img-fluid" alt="Puppy Website">
+        <h2>Puppy Website</h2>
+        <p>Built with HTML,CSS and JavaScript</p>
+    </div>
+ </div>
+
+                </div>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
