--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Nombulelo Phatlane</title>
+    <title>Contact Me</title>
     <link rel="stylesheet" href="src/style.css">
     <script src="https://kit.fontawesome.com/77cc4812f3.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
-<body>
+<body class="text-center">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Nombulelo Phatlane</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -39,18 +39,11 @@
             </ul>
         </div>
     </nav>
-    <div class="content-container container">
-        <div class="row">
-            <div class="col-6" id="column">
-    <h1>Hi, I am Nombulelo Phatlane</h1>
-    <h2>Front-end developer based in South Africa</h2>
-    <p>Nombulelo Phatlane is a goal driven individual who dreams of becoming a programmer and started her coding journey with Matt Delac and his SheCodes workshop at the beggining of 2023. Since  joining SheCodes Nombulelo has learnt HTML, CSS and JavaScript and built projects using those languages. </p>
-    <div class="nav-link"><a href="#" class="btn btn-info">Check out my work</a></div>
-    </div>
-    <div class="col-6" id="column">
-    <img src="src/images/tumelo.jpg" class="img-fluid" width="450px" height="150px" alt="Nombulelo Phatlane" ></div>
-    </div>
-    </div>
+    <h1>Let's get in touch!</h1>
+    <h2>Email</h2>
+    <p><a href="mailto:tumelophatlane0410@gmail.com">tumelophatlane0410@gmail.com</a></p>
+    <h2>Linkedin</h2>
+<p><a href="https://www.linkedin.com/in/nombulelo-phatlane-511116263">Nombulelo Phatlane</a></p>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
