--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
             </ul>
         </div>
     </nav>
-    <div class="hero">
+    <div class="hero ">
     <h2>hello, I am</h2>
     <h1>Nombulelo Phatlane</h1>
     <h3>Front-end developer based in South Africa</h3>
     <div class="button">
-    <a href="#" class="btn btn-light">Contact Me</a>
+    <a href="contact.html" class="btn btn-light">Contact Me</a>
     </div>
     </div>
     <p>Below are projects I've worked on</p>
@@ -80,8 +80,28 @@
                 <div class="nav-link"><a href="#" class="btn btn-info">Learn More</a>
             </p>
         </div>
+        
         </div>
     </div>
+    <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+            <div>
+                <h3>Work Inquiry</h3>
+                <p class="text-muted">Let's work together</p>
+            </div>
+            <div>
+                <a href="#" class="btn btn-light">Contact Me</a>
+            </div>
+            <div class="d-flex justify-content-center mb-5">
+                <a href="mailto:tumelophatlane0410@gmail.com" class="email-link">tumelophatlane0410@gmail.com</a>
+            </div>
+            <div class="social-links d-flex justify-content-center">
+                <a href="https://github.com/stillmste3" target="_blank"><i class="fa-brands fa-github"
+                        style="color: #4191c3;"></i></a>
+                <a href="https://www.linkedin.com/in/nombulelo-phatlane-511116263" target="_blank"><i
+                        class="fa-brands fa-linkedin" style="color: #4191c3;"></i></a>
+            </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
