--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Nombulelo Phatlane is a front-end developer based in South Africa">
     <title>Nombulelo Phatlane</title>
     <link rel="stylesheet" href="src/style.css">
     <script src="https://kit.fontawesome.com/77cc4812f3.js" crossorigin="anonymous"></script>
@@ -58,14 +59,14 @@
                 <div class="project-description"></div>
                 <h2>Puppy Website</h2>
                 <p>Totally Pawssible is a delightful online destination for all dog lovers who appreciate every breed and would like to own one someday. This webpage crafted using HTML and CSS, offers a wide range of dog breeds both small and big, from the great dane to the chihuahua. Whether you're a first time owner or an experienced owner Totally Pawssible is your go to source for learning about our fury friends.
-                    <div class="nav-link"><a href="#" class="btn btn-info">Learn More</a></div>
+                    <div class="nav-link"><a href="https://www.shecodes.io/workshops/shecodes-basics-3465164f-44e1-41c3-b91c-b2e5fdf48939/projects/1553176" class="btn btn-info">Launch</a></div>
                 </p>
             </div>
             <div class="col" id="column">
                 <div class="project-description"></div>
                 <h2>Weather App</h2>
                 <p>The weather app is a user-friendly web application built using HTML, CSS and JavaScript. It provides real time weather information for locations all around the world. The app alllows users to enter the name of a city or use their device's location using geolocation to retrieve  weather data for their current location. The app's interface is designed using HTML and CSS to provide visually appealing and intuitive user experience. It displays essential weather information such as temperature, humidity, wind speed and weather conditions for the selected location. JavaScript is used to fetch weather data from a weather API, parse the retrieved data, and dynamically update the app's interface.
-                <div class="nav-link"><a href="#" class="btn btn-info">Learn More</a></div> </p>
+                <div class="nav-link"><a href="https://illustrious-cactus-8970e4.netlify.app/" class="btn btn-info">Launch</a></div> </p>
             </div>
             <div class="col d-none d-lg-block">
             <div class="col"><img src="src/images/weather.png" class="img-fluid" alt="Weather App"></div>
@@ -77,7 +78,7 @@
             <div class="project-description"></div>
             <h2>Breakout Game</h2>
             <p>Breakout is a web application for gamers. It is built using HTML, CSS and JavaScript. Users can interact with the app by moving the cursor around. The game alerts players when they lose and win and it also keeps count of their score. Feel like starting the game afresh? The reset button is just for that!
-                <div class="nav-link"><a href="#" class="btn btn-info">Learn More</a>
+                <div class="nav-link"><a href="https://effulgent-klepon-d80930.netlify.app/" class="btn btn-info">Launch</a>
             </p>
         </div>
         
