--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
     <h1>Hi, I am Nombulelo Phatlane</h1>
     <h2>Front-end developer based in South Africa</h2>
     <p>Nombulelo Phatlane is a goal driven individual who dreams of becoming a programmer and started her coding journey with Matt Delac and his SheCodes workshop at the beggining of 2023. Since  joining SheCodes Nombulelo has learnt HTML, CSS and JavaScript and built projects using those languages. </p>
-    <div class="nav-link"><a href="#" class="btn btn-info">Check out my work</a></div>
+    <div class="nav-link"><a href="work.html" class="btn btn-info">Check out my work</a></div>
     </div>
     <div class="col-6" id="column">
     <img src="src/images/tumelo.jpg" class="img-fluid" width="450px" height="150px" alt="Nombulelo Phatlane" ></div>
