--- a/work.html
+++ b/work.html
@@ -55,7 +55,7 @@
     </div>
     <div class="col-6">
         <img src="src/images/breakout-app.png" class="img-fluid" alt="Puppy Website">
-        <h2>Puppy Website</h2>
+        <h2>Break-out Game</h2>
         <p>Built with HTML,CSS and JavaScript</p>
     </div>
  </div>
